# cmake-project

./: CMakeLists.txt  README.md  autogen.sh
doc/: hello.txt
lib/: CMakeLists.txt  hello.c
src/: CMakeLists.txt  CmakeLists.txt~  main.c
