CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(HELLO)
set(SRC_LIST main.c)
message(STATUS "This is Binary dir " ${HELLO_BINARY_DIR})
message(STATUS "This is Source dir " ${HELLO_SOURCE_DIR})
ADD_SUBDIRECTORY(lib lib)
ADD_SUBDIRECTORY(src bin)
INSTALL(FILES COPYRIGHT README DESTINATION build/test/share)
#INSTALL(PROGRAMS runhello.sh DESTINATION build/test/bin)
INSTALL(DIRECTORY doc/ DESTINATION build/test/doc)

#AUX_SOURCE_DIRECTORY(. SRC_LIST)
#ADD_EXECUTABLE(hello ${SRC_LIST})

